--- a/TbdModule/src/main/res/layout/fragment_room_settings.xml
+++ b/TbdModule/src/main/res/layout/fragment_room_settings.xml
@@ -71,6 +71,8 @@ Section RCB
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/room_101a"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 android:layout_marginTop="20dp"/>
             </RelativeLayout>
 
@@ -82,6 +84,7 @@ Section RCB
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lighting"
+                android:textColor="@color/black"
                 android:layout_marginTop="10dp"/>
             </RelativeLayout>
 
@@ -144,6 +147,8 @@ Section RCB
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/room_101a"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 android:layout_marginTop="10dp"/>
             </RelativeLayout>
 
@@ -156,6 +161,7 @@ Section RCB
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/time"
+                android:textColor="@color/black"
                 android:layout_marginTop="0dp"/>
             </RelativeLayout>
 
@@ -168,6 +174,7 @@ Section RCB
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/timer"
+                android:textColor="@color/black"
                 android:layout_marginTop="5dp"/>
             </RelativeLayout>
 
@@ -193,25 +200,58 @@ Section RCB
             android:orientation="vertical"
             android:padding="15dp">
             <!--Temperature-->
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/room_101a"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="20dp"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/temperature"
+                android:textColor="@color/black"
                 android:layout_marginTop="20dp"/>
+            </RelativeLayout>
 
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/air_quality"
+                android:textColor="@color/black"
                 android:layout_marginTop="5dp" />
+            </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
             <SeekBar
                 android:id="@+id/seekbar2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:max="100"
                 android:progress="50"
+                android:outlineAmbientShadowColor="@color/black"
                 android:layout_marginTop="10dp" />
+            </RelativeLayout>
         </LinearLayout>
 
 
