RoomSettingsFragment -Now depending on which room you enter, information for that certain room from the database will now appear on the roomsettingsFragment -For now, only the name of the room appears

--- a/TbdModule/src/main/res/layout/fragment_room_settings.xml
+++ b/TbdModule/src/main/res/layout/fragment_room_settings.xml
@@ -25,7 +25,6 @@ Section RCB
             android:id="@+id/settings_exit"
             android:layout_width="50dp"
             android:layout_height="70dp"
-            android:src="@drawable/arrow_back_black"
             android:padding="14dp"/>
 
         <TextView
@@ -68,6 +67,7 @@ Section RCB
                 android:layout_height="wrap_content"
                 android:padding="5dp">
             <TextView
+                android:id="@+id/lightingText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/room_101a"
