--- a/TbdModule/src/main/res/layout/nav_header.xml
+++ b/TbdModule/src/main/res/layout/nav_header.xml
@@ -15,13 +15,15 @@
         android:src="@mipmap/ic_launcher_foreground" />
 
     <TextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nametesting"
+        android:text="@string/name"
         android:textColor="@color/white"
         android:textStyle="bold"/>
 
     <TextView
+        android:id="@+id/email2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/email2"
