--- a/TbdModule/src/main/res/layout/activity_login.xml
+++ b/TbdModule/src/main/res/layout/activity_login.xml
@@ -29,6 +29,7 @@ Section RCB
         android:id="@+id/usernameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints="emailAddress"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:background="#80FFFFFF"
@@ -41,6 +42,7 @@ Section RCB
         android:id="@+id/passwordInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints="password"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:background="#80FFFFFF"
@@ -98,4 +100,11 @@ Section RCB
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:minHeight="48dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 </LinearLayout>
