-Added svg vector file and new vector assets. -Added new fragment links in the options menu -Added settings screen -Implementing Night Mode in settings screen. -Adding Vector assets and implementing notifications setting. -New Vector files added. -Font size functionality added in settings screen. -Completed settings screen design and starting Implementations -Implemented dial run time permission in settings screen. -Feedback in settings now takes us to feedback screen. -Back button implementation -Updated background colors in all screens for better screen flow. -Location runtime permission implemented. -Room settings implementation continued. -Modifying menu items layout. -Removed call option from settings screen. -Complications with menu item background. -Moving room settings implementations to one screen. -Updated the room settings screen so Lighting, Temperature and Time are tracked in one screen. -Room settings design -Removing unused screens -Updated settings screen and removed phone call implementation. -LoginActivity Test implemented and commented out to avoid app crash. -Switching to identical code for all room fragments for testing purposes. -Added a progress bar displaying for the log in page. -Made sure progress bar only displays when login credentials are correct and stops displaying when credentials are incorrect. -Toast displays in case of database error. -Added autofillhints in login xml file. -Completed 10 test cases in LoginActivityTest class. -Moved and deleted LoginActivity test from src/test to android/test. -Added a fragment AboutUs which will include some basic info. -About us fragment will include some info about us the app and will be accessed through settings screen. -Added a FAB on the main page which will have some functionality.

--- a/TbdModule/src/main/res/layout/fragment_home.xml
+++ b/TbdModule/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,24 @@ Section RCB
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <FrameLayout
+      <!-- Floating Action Button -->
+
+      <com.google.android.material.floatingactionbutton.FloatingActionButton
+          android:id="@+id/fab_generate_code"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_margin="16dp"
+          app:layout_anchorGravity="bottom|end"
+          android:src="@drawable/fab"
+          android:contentDescription="@string/generate_code"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.907"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintVertical_bias="0.883" />
+
+      <FrameLayout
         android:id="@+id/frame1A"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -163,6 +180,8 @@ Section RCB
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
