-Added a vector asset to include for the FAB. -The FAB will display in the room fragments and prompt the user to generate a code in order to access the room. -When clicked, a code is generated to enter the room.

--- a/TbdModule/src/main/res/layout/fragment_home.xml
+++ b/TbdModule/src/main/res/layout/fragment_home.xml
@@ -22,14 +22,13 @@ Section RCB
 
       <!-- Floating Action Button -->
 
-
       <com.google.android.material.floatingactionbutton.FloatingActionButton
           android:id="@+id/fab_generate_code"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="16dp"
           android:contentDescription="@string/generate_code"
-          android:src="@drawable/fab"
+          android:src="@drawable/add_message"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.895"
