--- a/TbdModule/src/main/res/layout/fragment_feedback.xml
+++ b/TbdModule/src/main/res/layout/fragment_feedback.xml
@@ -61,6 +61,14 @@
         android:inputType="textMultiLine"
         android:gravity="top"
         android:minLines="3" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:indeterminate="true" />
+
 
     <Button
         android:id="@+id/submitButton"
