--- a/TbdModule/src/main/res/layout/fragment_home.xml
+++ b/TbdModule/src/main/res/layout/fragment_home.xml
@@ -14,11 +14,16 @@ Section RCB
     android:layout_height="match_parent"
     android:background="@drawable/splash_background"
     tools:context=".MainActivity">
-  
-  <androidx.constraintlayout.widget.ConstraintLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+  <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
       <!-- Floating Action Button -->
 
@@ -184,4 +189,5 @@ Section RCB
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </ScrollView>
